# poker_simulation_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  board.hpp  card.hpp  combinations.hpp  deck.hpp  hand.hpp  player.hpp  poker.cpp  poker.h  utilities.hpp
include/policy/: action.hpp
lib/: CMakeLists.txt  board.cpp  card.cpp  combinations.cpp  deck.cpp  hand.cpp  player.cpp
saves/: comb3c.txt  comb4c.txt  result_blind_2p.txt  result_blind_3p.txt  result_blind_4p.txt  result_blind_5p.txt  result_blind_6p.txt  result_blind_7p.txt  result_blind_8p.txt  result_blind_9p.txt
saves_backup/: comb2c.txt
src/: core.cpp  estimate.cpp  main_game.cpp  simulate.cpp
